Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier error SEMI
    7       | Specifier FunDec CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | /* empty */

   16 Tag: ID

   17 VarDec: ID
   18       | TYPE
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC

   26 StmtList: Stmt StmtList
   27         | /* empty */

   28 Stmt: Exp SEMI
   29     | CompSt
   30     | RETURN Exp SEMI
   31     | IF LP Exp RP Stmt
   32     | IF LP Exp RP Stmt ELSE Stmt
   33     | IF LP Exp RP Exp error ELSE Stmt
   34     | WHILE LP Exp RP Stmt

   35 DefList: Def DefList
   36        | /* empty */

   37 Def: Specifier DecList SEMI

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp RP
   51    | LP error RP
   52    | MINUS Exp
   53    | NOT Exp
   54    | ID LP Args RP
   55    | ID LP RP
   56    | Exp LB Exp RB
   57    | Exp DOT ID
   58    | ID
   59    | INT
   60    | FLOAT

   61 Args: Exp COMMA Args
   62     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 33 51
INT (258) 19 59
FLOAT (259) 60
ID (260) 14 16 17 20 21 54 55 57 58
SEMI (261) 4 5 6 28 30 37
COMMA (262) 9 22 39 61
ASSIGNOP (263) 41 42
RELOP (264) 45
PLUS (265) 46
MINUS (266) 47 52
STAR (267) 48
DIV (268) 49
AND (269) 43
OR (270) 44
DOT (271) 57
NOT (272) 53
TYPE (273) 10 18
LP (274) 20 21 31 32 33 34 50 51 54 55
RP (275) 20 21 31 32 33 34 50 51 54 55
LB (276) 19 56
RB (277) 19 56
LC (278) 12 25
RC (279) 12 25
STRUCT (280) 12 13
RETURN (281) 30
IF (282) 31 32 33
ELSE (283) 32 33
WHILE (284) 34
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 7 24 37
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18 19, on right: 8 9 19 24 40 41
FunDec (41)
    on left: 20 21, on right: 7
VarList (42)
    on left: 22 23, on right: 20 22
ParamDec (43)
    on left: 24, on right: 22 23
CompSt (44)
    on left: 25, on right: 7 29
StmtList (45)
    on left: 26 27, on right: 25 26
Stmt (46)
    on left: 28 29 30 31 32 33 34, on right: 26 31 32 33 34
DefList (47)
    on left: 35 36, on right: 12 25 35
Def (48)
    on left: 37, on right: 35
DecList (49)
    on left: 38 39, on right: 37 39
Dec (50)
    on left: 40 41, on right: 38 39
Exp (51)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60, on right: 28 30 31 32 33 34 41 42 43 44 45 46 47 48 49 50 52
    53 56 57 61 62
Args (52)
    on left: 61 62, on right: 54 61


state 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


state 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . error SEMI
    7       | Specifier . FunDec CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15
    TYPE   shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


state 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


state 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


state 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


state 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 13

    6 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 21


state 14

   17 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP RP

    LP  shift, and go to state 22

    $default  reduce using rule 17 (VarDec)


state 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 16

   18 VarDec: TYPE .

    $default  reduce using rule 18 (VarDec)


state 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 23


state 18

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 8 (ExtDecList)


state 19

    7 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


state 20

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


state 21

    6 ExtDef: Specifier error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 22

   20 FunDec: ID LP . VarList RP
   21       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


state 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 24

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID    shift, and go to state 35
    TYPE  shift, and go to state 16

    ExtDecList  go to state 36
    VarDec      go to state 18


state 25

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 37


state 26

   25 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 38
    Def              go to state 30


state 27

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


state 28

   37 Def: Specifier . DecList SEMI

    ID    shift, and go to state 35
    TYPE  shift, and go to state 16

    VarDec   go to state 39
    DecList  go to state 40
    Dec      go to state 41


state 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 42


state 30

   35 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 43
    Def              go to state 30


state 31

   21 FunDec: ID LP RP .

    $default  reduce using rule 21 (FunDec)


state 32

   24 ParamDec: Specifier . VarDec

    ID    shift, and go to state 35
    TYPE  shift, and go to state 16

    VarDec  go to state 44


state 33

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 45


state 34

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 46

    $default  reduce using rule 23 (VarList)


state 35

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


state 36

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 37

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 47


state 38

   25 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 26
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    $default  reduce using rule 27 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 58
    Stmt      go to state 59
    Exp       go to state 60


state 39

   19 VarDec: VarDec . LB INT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 61
    LB        shift, and go to state 25

    $default  reduce using rule 40 (Dec)


state 40

   37 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 62


state 41

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 38 (DecList)


state 42

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


state 43

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


state 44

   19 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 24 (ParamDec)


state 45

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


state 46

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 64
    ParamDec         go to state 34


state 47

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


state 48

   59 Exp: INT .

    $default  reduce using rule 59 (Exp)


state 49

   60 Exp: FLOAT .

    $default  reduce using rule 60 (Exp)


state 50

   54 Exp: ID . LP Args RP
   55    | ID . LP RP
   58    | ID .

    LP  shift, and go to state 65

    $default  reduce using rule 58 (Exp)


state 51

   52 Exp: MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 66


state 52

   53 Exp: NOT . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 67


state 53

   50 Exp: LP . Exp RP
   51    | LP . error RP

    error  shift, and go to state 68
    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 69


state 54

   30 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 70


state 55

   31 Stmt: IF . LP Exp RP Stmt
   32     | IF . LP Exp RP Stmt ELSE Stmt
   33     | IF . LP Exp RP Exp error ELSE Stmt

    LP  shift, and go to state 71


state 56

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 72


state 57

   29 Stmt: CompSt .

    $default  reduce using rule 29 (Stmt)


state 58

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 73


state 59

   26 StmtList: Stmt . StmtList

    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 26
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    $default  reduce using rule 27 (StmtList)

    CompSt    go to state 57
    StmtList  go to state 74
    Stmt      go to state 59
    Exp       go to state 60


state 60

   28 Stmt: Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    SEMI      shift, and go to state 75
    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85


state 61

   41 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 86


state 62

   37 Def: Specifier DecList SEMI .

    $default  reduce using rule 37 (Def)


state 63

   39 DecList: Dec COMMA . DecList

    ID    shift, and go to state 35
    TYPE  shift, and go to state 16

    VarDec   go to state 39
    DecList  go to state 87
    Dec      go to state 41


state 64

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


state 65

   54 Exp: ID LP . Args RP
   55    | ID LP . RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 88

    Exp   go to state 89
    Args  go to state 90


state 66

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   52    | MINUS Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    STAR  shift, and go to state 80
    DIV   shift, and go to state 81
    DOT   shift, and go to state 84
    LB    shift, and go to state 85

    $default  reduce using rule 52 (Exp)


state 67

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   53    | NOT Exp .
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    DOT  shift, and go to state 84
    LB   shift, and go to state 85

    $default  reduce using rule 53 (Exp)


state 68

   51 Exp: LP error . RP

    RP  shift, and go to state 91


state 69

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   50    | LP Exp . RP
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    RP        shift, and go to state 92
    LB        shift, and go to state 85


state 70

   30 Stmt: RETURN Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    SEMI      shift, and go to state 93
    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85


state 71

   31 Stmt: IF LP . Exp RP Stmt
   32     | IF LP . Exp RP Stmt ELSE Stmt
   33     | IF LP . Exp RP Exp error ELSE Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 94


state 72

   34 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 95


state 73

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


state 74

   26 StmtList: Stmt StmtList .

    $default  reduce using rule 26 (StmtList)


state 75

   28 Stmt: Exp SEMI .

    $default  reduce using rule 28 (Stmt)


state 76

   42 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 96


state 77

   45 Exp: Exp RELOP . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 97


state 78

   46 Exp: Exp PLUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 98


state 79

   47 Exp: Exp MINUS . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 99


state 80

   48 Exp: Exp STAR . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 100


state 81

   49 Exp: Exp DIV . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 101


state 82

   43 Exp: Exp AND . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 102


state 83

   44 Exp: Exp OR . Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 103


state 84

   57 Exp: Exp DOT . ID

    ID  shift, and go to state 104


state 85

   56 Exp: Exp LB . Exp RB

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 105


state 86

   41 Dec: VarDec ASSIGNOP Exp .
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85

    $default  reduce using rule 41 (Dec)


state 87

   39 DecList: Dec COMMA DecList .

    $default  reduce using rule 39 (DecList)


state 88

   55 Exp: ID LP RP .

    $default  reduce using rule 55 (Exp)


state 89

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   56    | Exp . LB Exp RB
   57    | Exp . DOT ID
   61 Args: Exp . COMMA Args
   62     | Exp .

    COMMA     shift, and go to state 106
    ASSIGNOP  shift, and go to state 76
    RELOP     shift, and go to state 77
    PLUS      shift, and go to state 78
    MINUS     shift, and go to state 79
    STAR      shift, and go to state 80
    DIV       shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85

    $default  reduce using rule 62 (Args)


state 90

   54 Exp: ID LP Args . RP

    RP  shift, and go to state 107


state 91

   51 Exp: LP error RP .

    $default  reduce using rule 51 (Exp)


state 92

   50 Exp: LP Exp RP .

    $default  reduce using rule 50 (Exp)


state 93

   30 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 30 (Stmt)


state 94
